Resolves: tdf#31577 volatile lookup ranges must not be cached

Change-Id: Iac8574329c8c8e0bc0ac956993ccdd085372a6cc